--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -6,20 +6,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix" *ngFor="let recip of recipe">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{ recip.name }}</h4>
-        <p class="list-group-item-text">{{ recip.description }}</p>
-      </div>
-      <span class="pull-right">
-        <img
-          [src]="recip.imagePath"
-          alt=""
-          class="img-responsive"
-          style="max-height: 50px"
-        />
-      </span>
-    </a>
+   
   </div>
 </div>
-<app-recipe-item></app-recipe-item>
+<app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipe-item>
