added a new recipe to the recipe list

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,11 @@
 <hr />
 <div class="col-md-5">
-  <app-recipes-list></app-recipes-list>
+  <app-recipes-list (recipeWasSelected)="(selected=$event)"></app-recipes-list>
 </div>
 <div class="col-md-7">
-  <app-recipe-discription></app-recipe-discription>
+  <app-recipe-discription
+  *ngIf="selected; else default" [recipe]="selected"></app-recipe-discription>
+  <ng-template #default >
+    please select a recipe
+  </ng-template>
 </div>
