--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -5,8 +5,10 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-   
-  </div>
+  <div class="col-xs-12"></div>
 </div>
-<app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipe-item>
+<app-recipe-item
+  *ngFor="let recipeEl of recipes"
+  [recipe]="recipeEl"
+  (recipeSelected)="onRecipeSelected(recipeEl)"
+></app-recipe-item>
