added services for cross component communications

--- a/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
+++ b/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
@@ -11,12 +11,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">
         manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">to shopping list</a></li>
+        <li><a href="#" (click)="sendRecipeDetails(recipe.ingrediants)">to shopping list </a></li>
         <li><a href="#">edit recipe</a></li>
         <li><a href="#">delete recipe</a></li>
       </ul>
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
-ingredients
+    <div class="col-xs-12" *ngFor="let ingre of recipe.ingrediants">
+          {{ingre.name}}-{{ingre.amount}}
     </div>
   </div>
