--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <hr />
 <div class="col-md-5">
-  <app-recipes-list (recipeWasSelected)="(selected=$event)"></app-recipes-list>
+  <app-recipes-list></app-recipes-list>
 </div>
 <div class="col-md-7">
   <app-recipe-discription
