--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,23 +1,23 @@
 <div class="row">
   <div class="col-xs-12">
-      <form>
-          <div class="row">
-          <div class="col-sm-5 form group ">
-              <label for="name"> Name</label>
-              <label type="text" id="name" class="form-control"></label>
-          </div>
-          <div class="col-sm-2">
+    <form>
+      <div class="row">
+        <div class="col-sm-5 form group">
+          <label for="name"> Name</label>
+          <input type="text" id="name" class="form-control" #nameInput>
+        </div>
+        <div class="col-sm-2">
           <label for="amount"> Amount</label>
-          <label type="number" id="amount" class="form-control"></label>
+          <input type="number" id="amount" class="form-control" #amountInput>
         </div>
-    </div>
-    <div class="row">
+      </div>
+      <div class="row">
         <div class="col-xs-12">
-            <div class="btn btn-success" type="submit"> ADD</div>
-            <div class="btn btn-danger" type="button">DELETE</div>
-            <div class="btn btn-primary" type="button">CLEAR</div>
+          <div class="btn btn-success" type="submit" (click)="addIngredient()">ADD</div>
+          <div class="btn btn-danger" type="button">DELETE</div>
+          <div class="btn btn-primary" type="button">CLEAR</div>
         </div>
-    </div>
-      </form>
+      </div>
+    </form>
   </div>
 </div>
