routing between the components is learnt

--- a/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
+++ b/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
@@ -16,9 +16,9 @@
         manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click)="sendRecipeDetails(recipe.ingrediants)">to shopping list </a></li>
-        <li><a href="#">edit recipe</a></li>
-        <li><a href="#">delete recipe</a></li>
+        <li><a (click)="sendRecipeDetails(recipe.ingrediants)">to shopping list </a></li>
+        <li><a >edit recipe</a></li>
+        <li><a>delete recipe</a></li>
       </ul>
     </div>
   </div>
