--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,26 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Recipe Book</a>
+      <a class="navbar-brand">Recipe Book</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="#" (click)="onSelect('recipe')">Recipes</a>
+        <li routerLinkActive="active">
+          <a routerLink="/recipes">Recipes</a>
         </li>
-        <li>
-          <a href="#" (click)="onSelect('shopping-list')">shopping List</a>
+        <li routerLinkActive="active">
+          <a routerLink="/shoppingList">shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a class="dropdown-toggle" href="#" role="button"
+          <a class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a href="#"> save Data </a></li>
-            <li><a href="#"> Fetch data </a></li>
+            <li><a> save Data </a></li>
+            <li><a> Fetch data </a></li>
           </ul>
         </li>
       </ul>
