--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -8,6 +8,7 @@
   <div class="col-xs-12"></div>
 </div>
 <app-recipe-item
-  *ngFor="let recipeEl of recipes"
-  [recipe]="recipeEl"
+  *ngFor="let recipeEl of recipes; let i= index;" 
+  [id]="i" 
+   [routerLink]="['/recipes',i]"
 ></app-recipe-item>
