--- a/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
+++ b/src/app/recipes/recipes-list/recipe-discription/recipe-discription.component.html
@@ -1,12 +1,15 @@
-
 <div class="row">
   <div class="col-xs-12">
-    <img src={{recipe.imagePath}} alt={{recipe.name}} class="img-responsive" />
+    <img
+      src="{{ recipe.imagePath }}"
+      alt="{{ recipe.name }}"
+      class="img-responsive"
+    />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -16,20 +19,24 @@
         manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="sendRecipeDetails(recipe.ingrediants)">to shopping list </a></li>
-        <li><a >edit recipe</a></li>
+        <li>
+          <a (click)="sendRecipeDetails(recipe.ingrediants)"
+            >to shopping list
+          </a>
+        </li>
+        <li><a [routerLink]="[ 'edit']">edit recipe</a></li>
         <li><a>delete recipe</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-{{recipe.description}}
-    </div>
+  <div class="col-xs-12">
+    {{ recipe.description }}
   </div>
-  <div class="row">
-    <div class="col-xs-12" *ngFor="let ingre of recipe.ingrediants">
-          {{ingre.name}}-{{ingre.amount}}
-    </div>
+</div>
+<div class="row">
+  <div class="col-xs-12" *ngFor="let ingre of recipe.ingrediants">
+    {{ ingre.name }}-{{ ingre.amount }}
   </div>
+</div>
